correction responsive folding menu and  navbar version tablet

--- a/kaza/src/styles/components/_folding-menu.scss
+++ b/kaza/src/styles/components/_folding-menu.scss
@@ -1,7 +1,7 @@
 .appartement {
   margin: 20px 80px;
   &__description {
-    width: 100%;
+    // width: 100%;
     @include flex-space-between;
     margin-top: 24px;
     gap: 86px;
@@ -23,8 +23,32 @@
   }
   @include bp(mobile) {
     margin: 30px;
+    &__description {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      & .menu {
+        width: auto;
+        max-width: 100%;
+        & .info {
+          @include dropdown-info(150px);
+        }
+      }
+    }
   }
   @include bp(tablet) {
     margin: 40px;
+    &__description {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      & .menu {
+        width: auto;
+        max-width: 100%;
+        & .info {
+          @include dropdown-info(200px);
+        }
+      }
+    }
   }
 }
