--- a/kaza/src/styles/components/_navBar.scss
+++ b/kaza/src/styles/components/_navBar.scss
@@ -43,8 +43,23 @@ header {
       & .links {
         gap: 15px;
         & a {
-          font-size: 1em;
+          font-size: 16px;
         }
+      }
+    }
+  }
+  @include bp(tablet) {
+    height: 50px;
+    .navBar {
+      margin: 0 40px;
+      gap: 35px;
+
+      & img {
+        width: 145px;
+        height: 46.88px;
+      }
+      & .links {
+        gap: 15px;
       }
     }
   }
