--- a/kaza/src/styles/mixins/_mixins.scss
+++ b/kaza/src/styles/mixins/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin dropdown-info($size) {
-  width: 100%;
+  max-width: 100%;
   font-size: 18px;
   margin: 0;
   font-weight: 400;
@@ -7,15 +7,24 @@
   color: $primary-color;
   height: $size;
   background-color: $secondary-color;
+  border-radius: 5px;
   transition: 0.25s ease-out, padding 0, 02 ease-out;
   color: rgb(4, 4, 4);
   padding: 25px 20px;
   @include bp(mobile) {
     font-size: 15px;
     padding: 10px 20px;
-    line-height: 1;
+    line-height: 1.2;
     p {
       margin-top: 4px;
+    }
+  }
+  @include bp(tablet) {
+    font-size: 17px;
+    padding: 10px 20px;
+    line-height: 1.5;
+    p {
+      margin-top: 10px;
     }
   }
 }
@@ -27,8 +36,6 @@
   align-items: center;
   margin-top: 0;
   background-color: $primary-color;
-
-  width: 100%;
   font-size: 18px;
   font-weight: 500;
   line-height: 25.67px;
